// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render default props 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiExpression
      description="and use metric"
      onClick={[Function]}
      uppercase={false}
      value="count"
    />
  }
  closePopover={[Function]}
  hasArrow={true}
  id="metricsPopover"
  initialFocus="body"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <EuiPopoverTitle>
      <FormattedMessage
        defaultMessage="Metrics"
        id="xpack.maps.layerPanel.metricsExpression.metricsPopoverTitle"
        values={Object {}}
      />
    </EuiPopoverTitle>
    <EuiFormErrorText>
      <FormattedMessage
        defaultMessage="JOIN must be set"
        id="xpack.maps.layerPanel.metricsExpression.joinMustBeSetErrorMessage"
        values={Object {}}
      />
    </EuiFormErrorText>
  </div>
</EuiPopover>
`;

exports[`Should use custom labels and remove incomplete metrics in metric expression 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiExpression
      description="and use metrics"
      onClick={[Function]}
      uppercase={false}
      value="count, my count, max prop1, mostest"
    />
  }
  closePopover={[Function]}
  hasArrow={true}
  id="metricsPopover"
  initialFocus="body"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <EuiPopoverTitle>
      <FormattedMessage
        defaultMessage="Metrics"
        id="xpack.maps.layerPanel.metricsExpression.metricsPopoverTitle"
        values={Object {}}
      />
    </EuiPopoverTitle>
    <EuiFormErrorText>
      <FormattedMessage
        defaultMessage="JOIN must be set"
        id="xpack.maps.layerPanel.metricsExpression.joinMustBeSetErrorMessage"
        values={Object {}}
      />
    </EuiFormErrorText>
  </div>
</EuiPopover>
`;
